<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@color/cream"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:fontFamily="@font/arizonia"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/add"
            android:textColor="@color/red"
            android:textSize="38sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:hint="@string/name"
            android:padding="20sp"
            android:textColorHint="@color/red"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/etlocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:hint="@string/location"
            android:padding="20sp"
            android:textColorHint="@color/red"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/etphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:hint="@string/phone"
            android:inputType="number"
            android:padding="20sp"
            android:textColorHint="@color/red"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/etrating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:hint="@string/rating"
            android:inputType="number"
            android:padding="20sp"
            android:textColorHint="@color/red"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="top|start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:padding="20sp"
            android:scrollbars="vertical"
            android:textColorHint="@color/red"
            android:textSize="18sp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="20dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textSize="15sp"
                android:textStyle="bold"
                android:id="@+id/btnback"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/red"/>




            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/submit"
                android:id="@+id/btnsubmit"
                android:backgroundTint="@color/red"
                />



        </LinearLayout>




    </LinearLayout>







</LinearLayout>