<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <Spinner
            android:id="@+id/spFilter"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:entries="@array/options" />
        
        <EditText
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/etFilter"
            android:hint="@string/filtertext"
            android:layout_marginTop="20dp"/>


        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/filterbtn"
            android:layout_gravity="center"
            android:backgroundTint="@color/red"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/btnFilter"
            />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add"
            android:layout_gravity="center"
            android:backgroundTint="@color/red"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/btnAddNewRestaurant"
            />



        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rvRestaurants"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>
</ScrollView>